2010-11-04  Ivan Maidanski  <ivmai@mail.ru>

	* tests/staticrootstest.c: Include string.h for memset() prototype.
	* tests/thread_leak_test.c (main): Fix printf() format specifiers.

2010-10-22  Ivan Maidanski <ivmai@mail.ru>

	* CMakeLists.txt: Check enable_parallel_mark on Darwin.
	* configure.ac: Ditto.
	* darwin_stop_world.c (DARWIN_SUSPEND_GC_THREADS,
	DARWIN_QUERY_TASK_THREADS): Rename to GC_NO_THREADS_DISCOVERY and
	GC_DISCOVER_TASK_THREADS, respectively.
	* os_dep.c (DARWIN_SUSPEND_GC_THREADS): Ditto.
	* pthread_support.c (DARWIN_SUSPEND_GC_THREADS): Ditto.
	* darwin_stop_world.c (DARWIN_QUERY_TASK_THREADS): Don't define
	(and remove FIXME).
	* darwin_stop_world.c (GC_use_threads_discovery): Add GC_API;
	comment; remove FIXME.
	* win32_threads.c (GC_NO_DLLMAIN): Rename to
	GC_NO_THREADS_DISCOVERY.
	* tests/test.c (GC_NO_DLLMAIN): Ditto.
	* doc/README.macros (GC_NO_DLLMAIN): Ditto.
	* doc/README.win32 (GC_NO_DLLMAIN): Ditto.
	* doc/README.macros (GC_NO_THREADS_DISCOVERY): Update the comment.
	* win32_threads.c (GC_win32_dll_threads): Define as macro to true
	if GC_DISCOVER_TASK_THREADS (and not GC_NO_THREADS_DISCOVERY);
	update the comment.
	* win32_threads.c (GC_use_DllMain): Rename to
	GC_use_threads_discovery; do not set GC_win32_dll_threads if
	GC_DISCOVER_TASK_THREADS.
	* win32_threads.c (GC_started_thread_while_stopped,
	GC_lookup_thread_inner, UNPROTECT_THREAD, GC_lookup_pthread,
	GC_thr_init, GC_pthread_create, DllMain): Rewrite some expressions
	which use GC_win32_dll_threads to minimize the possibility of
	an "unreachable code" compiler warning when GC_win32_dll_threads
	is defined as a macro.
	* win32_threads.c (GC_unregister_my_thread): Don't call
	GC_delete_thread() if GC_win32_dll_threads and THREAD_LOCAL_ALLOC
	(since can't happen); use "t" local variable only if not
	GC_win32_dll_threads.
	* win32_threads.c (GC_register_my_thread_inner): Reformat the
	comment.
	* doc/README.macros (GC_DISCOVER_TASK_THREADS): Document.