@@ -1,3 +1,9 @@
+2010-11-25  Ivan Maidanski  <ivmai@mail.ru>
+
+	* tests/test.c (main): Print the relevant message if GWW_VDB.
+	* include/private/gcconfig.h: Don't define MPROTECT_VDB for Win32
+	on x64 if compiled by GCC.
+
 2010-11-04  Ivan Maidanski  <ivmai@mail.ru>
 
 	* tests/staticrootstest.c: Include string.h for memset() prototype.
